Fix wrapping CSS for JSTree.

--- a/themes/bootstrap3/less/components/js-tree.less
+++ b/themes/bootstrap3/less/components/js-tree.less
@@ -20,10 +20,7 @@
     width: 16px;
     color: #000;
   }
-  .jstree-anchor {
-    padding-left: 5px;
-    white-space: nowrap;
-  }
+  .jstree-anchor { padding-left: 5px; }
   .jstree-container-ul,
   .jstree-children {
     padding-left: 16px;
